--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node auth/server.js",
+    "dev": "nodemon auth/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +16,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "python-shell": "^5.0.0"
   }
 }
